# river-medway-trading

./: .gitignore  README.md  pyproject.toml
data_ingestion/api/: fixture_stats_api.py
data_ingestion/api_football/: fixture_id_api.py  fixture_stats_api.py
data_ingestion/betfair_api/: pre_match_odds.py
data_sources/: api_betfair.py  api_sports_io.py  csv_football_data.py
feature_pipeline/: backfill_feature_pipeline.py  feature_engineering.py  feature_store_football_prematch_odds.py  football_betfair_prematch_odds.py  football_historical_prematch_odds.py  incremental_feature_pipeline.py
feature_pipeline/common/: feature_store_base.py
feature_pipeline/feature_engineering/: prematch_odds.py
feature_pipeline/football_prematch_odds/: feature_store.py  features.py  selectors.py
feature_pipeline/football_prematch_odds/runners/: load_historical_features_to_store.py  load_live_features_to_store.py
feature_pipeline/ft_pipeline_football_prematch_odds/: backfill_pipeline.py  config.py  incremental_pipeline.py
ingestion/: bronze_ingest.py  canonicalise.py  validate.py
ingestion/runners/betfair/: load_live_api_data.py
ingestion/runners/historical/: load_historical_csvs.py
ingestion_pipeline/: bronze_football_prematch_odds.py  bronze_ingest.py  canonicalise.py  checkpoints.py  config.py  football_betfair_prematch_odds.py  football_historical_prematch_odds.py  ingestion_utils.py  processed_log.py  utils.py
ingestion_pipeline/runners/betfair/: load_live_api_data_to_database.py  selector.py
ingestion_pipeline/runners/historical/: load_historical_csvs.py
research/: 202511_automate_brier_score_analysis.ipynb  202511_how_predictable_is_the_EPL.ipynb  how_predictable_is_the_EPL.ipynb
research /:  test.ipynb
