[project]
name = "river-medway-trading"
version = "0.1.0"
description = "ML Systematic Sports Trading System"
authors = [
    {name = "Michael O.",website = "https://medium.com/river-medway-trading"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "y"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
