[project]
name = "river-medway-trading"
version = "0.1.0"
description = "ML Systematic Sports Trading System"
authors = [
    {name = "Michael O.", email = "placeholder@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "google-cloud-storage (>=3.9.0,<4.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "pandas (>=2.2.0,<2.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastparquet (>=2025.12.0,<2026.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "hopsworks[python] (>=4.7.3,<5.0.0)"
]


[tool.poetry]
packages = [
    {include = "ingestion_pipeline"},
    {include = "feature_pipeline"},
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
